crianção de rota clientes/boletos e função de imprimir

--- a/views/cliente/relatorio.ejs
+++ b/views/cliente/relatorio.ejs
@@ -99,7 +99,7 @@
                                                     <td><%= c.tipo %></td>
                                                     <td><%= c.mes %></td>
                                                     <td>
-                                                        <a href="/cliente/<%=c.id%>" class='btn btn-success btn-icon-split btn-sm'>
+                                                        <a href="/cliente/<%=c._id%>" class='btn btn-success btn-icon-split btn-sm'>
                                                             <span class='icon text-white-50'>
                                                             <i class='fas fa-eye'></i>
                                                             </span> 
