--- a/views/cliente/detalhar.ejs
+++ b/views/cliente/detalhar.ejs
@@ -39,11 +39,6 @@
 
             <!-- Main Content -->
             <div id="content">
-
-                <!-- Topbar -->
-                
-                <!-- End of Topbar -->
-
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
@@ -73,18 +68,18 @@
                                         </tr>
                                     </tfoot>
                                     <tbody>
-                                        <% 
+                                        <!-- <% 
                                         const mes = 12;
-                                        for (var i = 0; i < mes; i++) {%>
+                                        for (var i = 0; i < mes; i++) {%> -->
                                                 <tr>
                                                     <td><%= c.nome %></td>
                                                     <td><%= c.cpf %></td>
                                                     <td>
-                                                        <a href="/cliente/<%=c.id%>" class='btn btn-success btn-icon-split btn-sm'>
+                                                        <a href="/cliente/boleto/<%=c.id%>" class='btn btn-success btn-icon-split btn-sm'>
                                                             <span class='icon text-white-50'>
                                                             <i class='fas fa-eye'></i>
                                                             </span> 
-                                                            <span class="text">Gerar</span>
+                                                            <span class="text">Imprimir</span>
                                                         </a>
                                                         <a href="/cliente/cadastrar/<%=c.id%>" class='btn btn-primary btn-icon-split btn-sm'>
                                                             <span class='icon text-white-50'>
@@ -93,10 +88,10 @@
                                                             <span class="text">Editar</span>
                                                         </a>
                                                         <a href="/cliente/deletar/<%=c.id%>" data-toggle="modal" data-target="#modal<%=c.id%>" class='btn btn-danger btn-icon-split btn-sm'>
-                                                        <span class='icon text-white-50'>
-                                                        <i class='fas fa-trash'></i>
-                                                        </span> 
-                                                        <span class="text">Deletar</span>
+                                                            <span class='icon text-white-50'>
+                                                            <i class='fas fa-trash'></i>
+                                                            </span> 
+                                                            <span class="text">Deletar</span>
                                                         </a>
 
                                                 <div class="modal fade" id="modal<%=c.id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -119,7 +114,7 @@
                                                 </div>
                                                     </td>
                                                 </tr>
-                                       <% } %>
+                                       <!-- <% } %> -->
                                     </tbody>
                                 </table>
                             </div>
